Clean obsolete docs and unused DTO